--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,6 +5,9 @@
    ========================================================================== */
 
 
+.jumbotron h1 {
+    color: rgba(76, 175, 80, 0.2);
+}
 
 
 
