--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
         <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js'%}"></script>
 
         <title>{% block head_title %}{% endblock %}</title>
+        <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+        {% block head_css %}{% endblock %}
+        {% block head_javascript %}{% endblock %}
 
     </head>
     <body>
