--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,9 +4,9 @@
 
 {##}
 {# Additional <head> content here, some extra meta tags or favicon #}
-{% block extrahead %}
-    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-{% endblock %}
+{#{% block extrahead %}#}
+{#    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">#}
+{#{% endblock %}#}
 {##}
 {##}
 {# Additional CSS includes #}
