--- a/templates/TelaMIS/index.html
+++ b/templates/TelaMIS/index.html
@@ -1,56 +1,64 @@
-{# [Created by SkaeX @ 2016-02-21 16:30:40] #} 
+{# [Created by SkaeX @ 2016-02-21 16:30:40] #}
 {% extends "base.html" %}
 {% load i18n %}
 {% load l10n %}
 {% load tz %}
 {% block head_title %}TELA{% endblock %}
 {% block body %}
-<!--[if lt IE 8]>
+    <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <nav class="navbar navbar navbar-default" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">TELA MIS</a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url "admin:index" %}">TELA MIS</a>
 
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" id="local-date">{{today}}</a></li>
-            <li><a href="#" id="non-local-date">{{today|unlocalize}}</a></li>
-          </ul>
-        </div>
-        
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#" id="local-date">{{ today }}</a></li>
+
+                    <li><a href="#" id="non-local-date">{{ today|unlocalize }}</a></li>
+                </ul>
+            </div>
+
         </div><!--/.navbar-collapse -->
-      </div>
+        </div>
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="container">
-    <div class="jumbotron">
-      <div class="container">
-        <h1>{% trans "TELA M<small>anagement</small> I<small>nformation</small> S<small>ystem</small>"%}</h1>
-        <p>{% blocktrans %}This is a template for the proposed management information system for the 
-          AUN TELA project {% endblocktrans %}</p>
-      </div>
-    </div>
+        <div class="jumbotron">
+            <div class="container">
+                <h1>{% trans "TELA M<small>anagement</small> I<small>nformation</small> S<small>ystem</small>" %}</h1>
 
-    <h2>Time Zones</h2>
-    <p> Barcelona: <span id="time-tz">{{now|time:"H:i"}}</span></p>
-    <p> UTC: <span id="time-utc">{{now|utc|time:"H:i"}}</span></p>
-    <p> New York: <span id="time-ny"> 
-           {{now|timezone:"America/New_York"|time:"H:i"}}</span></p>
-   
+                <p>{% blocktrans %}This is a template for the proposed management information system for the
+                    AUN TELA project {% endblocktrans %}</p>
+            </div>
+        </div>
 
-      <hr>
+        <div style="background-color: #0f0f0f; width: 20%; padding: 5px">
+            <h2>Time Zones</h2>
 
-      <footer>
-        <p>&copy; AUN TELA 2016</p>
-      </footer>
+            <p> Barcelona: <span id="time-tz">{{ now|time:"H:i" }}</span></p>
+
+            <p> UTC: <span id="time-utc">{{ now|utc|time:"H:i" }}</span></p>
+
+            <p> New York: <span id="time-ny">
+           {{ now|timezone:"America/New_York"|time:"H:i" }}</span></p>
+
+        </div>
+        <hr>
+
+        <footer class="footer">
+            <p>&copy; AUN TELA 2016</p>
+        </footer>
+
     </div> <!-- /container -->
-   </div>
+    </div>
 {% endblock %}
