--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -1,56 +1,69 @@
-{% extends "shop/base.html" %}
+{% extends "inventory/base.html" %}
 {% load static %}
 
 {% block title %}
-    Your shopping cart
+    Your checkout list
 {% endblock %}
 
 {% block content %}
-    <h1>Your shopping cart</h1>
+    <h1>Your Checkout List</h1>
     <table class="cart">
         <thead>
-            <tr>
-                <th>Image</th>
-                <th>Product</th>
-                <th>Quantity</th>
-                <th>Remove</th>
-                <th>Unit price</th>                
-                <th>Price</th>
-            </tr>
+        <tr>
+            <th>Image</th>
+            <th>Product</th>
+            <th>Quantity</th>
+            <th>Status</th>
+            <th>Remove</th>
+            {#                <th>Price</th>#}
+        </tr>
         </thead>
         <tbody>
         {% for item in cart %}
             {% with product=item.product %}
-            <tr>
-                <td>
-                    <a href="{{ product.get_absolute_url }}">
-                        <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
-                    </a>
-                </td>
-                <td>{{ product.name }}</td>
-                <td>
-                    <form action="{% url "cart:cart_add" product.id %}" method="post">
-                        {{ item.update_quantity_form.quantity }}
-                        {{ item.update_quantity_form.update }}
-                        <input type="submit" value="Update">
-                        {% csrf_token %}
-                    </form>
-                </td>
-                <td><a href="{% url "cart:cart_remove" product.id %}">Remove</a></td>
-                <td class="num">${{ item.price }}</td>
-                <td class="num">${{ item.total_price }}</td>
-            </tr>
+                <tr>
+                    <td>
+                        <a href="{{ product.get_absolute_url }}">
+                            <img src="
+
+
+                                    {% if product.image %}{{ product.image.url }}{% else %}{% static "suit/inventory/img/no_image.png" %}{% endif %}">
+                        </a>
+                    </td>
+                    <td>{{ product.name }}</td>
+                    <td>
+                        <form action="{% url "cart:cart_add" product.id %}" method="post">
+                            {{ item.update_quantity_form.quantity }}
+                            {{ item.update_quantity_form.update }}
+                            <input type="submit" value="Update">
+                            {% csrf_token %}
+                        </form>
+                    </td>
+
+                    <td>
+                        <form action="{% url "cart:cart_add" product.id %}" method="post">
+                            {{ item.update_quantity_form.status }}
+                            {{ item.update_quantity_form.update }}
+                            <input type="submit" value="Update">
+                            {% csrf_token %}
+                        </form>
+                    </td>
+                    <td><a href="{% url "cart:cart_remove" product.id %}">Remove</a></td>
+                    {#                <td class="num">${{ item.total_price }}</td>#}
+                </tr>
             {% endwith %}
         {% endfor %}
         <tr class="total">
-            <td>Total</td>
-            <td colspan="4"></td>
-            <td class="num">${{ cart.get_total_price }}</td>
+            <td>Total Items</td>
+            <td colspan="3"></td>
+            <td class="num">{{ cart.get_total_items }}</td>
         </tr>
         </tbody>
     </table>
     <p class="text-right">
-        <a href="{% url "shop:product_list" %}" class="button light">Continue shopping</a>
-        <a href="{% url "orders:order_create" %}" class="button">Checkout</a>
+        <a href="{% url "inventory:product_list" %}" class="button light">Continue Selecting</a>
+        <a href="{% url "transactions:checkout_create" %}" class="button">
+            Checkout
+        </a>
     </p>
 {% endblock %}
