--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -12,7 +12,17 @@
 </div>
 <div id="subheader">
     <div class="cart">
-        Your cart is empty.
+        {% with total_items=cart|length %}
+            {% if cart|length > 0 %}
+                Your cart:
+                <a href="{% url "cart:cart_detail" %}">
+                    {{ total_items }} item{{ total_items|pluralize }},
+                    {{ cart.get_total_items }}
+                </a>
+            {% else %}
+                Your checking list is empty.
+            {% endif %}
+        {% endwith %}
     </div>
 </div>
 <div id="content">
