cleaned the checkedout apps

--- a/transactions/templates/transactions/checkout/create.html
+++ b/transactions/templates/transactions/checkout/create.html
@@ -18,7 +18,7 @@
     </div>
     <form action="." method="post" class="order-form">
         {{ form.as_p }}
-        <p><input type="submit" value="Place order"></p>
+        <p><input type="submit" value="Checkout Items"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
