--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -67,7 +67,7 @@
                     <a href="{% url 'account:lga_list' %}">Local Gov't Area</a>
                 </li>
                 <li>
-                    <a href="{% url 'account:neighborhood_list' %}">Neighborhoods</a>
+                    <a href="#">Neighborhoods</a>
                 </li>
                 <li>
                     <a href="{% url 'account:venue_list' %}">Venues</a>
