Added summary data to font-end view

--- a/account/templates/account/center_list.html
+++ b/account/templates/account/center_list.html
@@ -24,9 +24,9 @@
                                <tr>
                                  <td>{{cen.title}}</td>
                                  <td>{{cen.venue}}</td>
-                                 <td>{{tut.facilitator}}</td>
-                                 <td>{{tut.group_size}}</td>
-                                 <td>{{tut.tutorial_types}}</td>
+                                 <td>{{cen.facilitator}}</td>
+                                 <td>{{cen.group_size}}</td>
+                                 <td>{{cen.tutorial_types}}</td>
                                </tr>
                             {% endfor %}
                            </tbody>
