--- a/account/templates/account/equipment_list.html
+++ b/account/templates/account/equipment_list.html
@@ -13,11 +13,10 @@
                                <tr>
                                  <th>Serial Number</th>
                                  <th>Type</th>
-                                 <th>status</th>
-                                 <!--<th>Created</th>-->
-                                 <th>Updated</th>
-                                 <th>Availability</th>
-
+                                 <th>Status</th>
+                                 <th>Avalability</th>
+                                 <th>Date Created</th>
+                                 <th>Date Updated</th>
                                </tr>
                              </thead>
 
@@ -26,7 +25,8 @@
                                <tr>
                                  <td>{{eqp.serial_num}}</td>
                                  <td>{{eqp.equipment_type}}</td>
-                                 <!--<td>{{eqp.created}}</td>-->
+                                 <td>{{eqp.status}}</td>
+                                 <td>{{eqp.created}}</td>
                                  <td>{{eqp.updated}}</td>
                                  <td>{{eqp.is_available}}</td>
                                </tr>
