--- a/account/templates/account/facilitator_list.html
+++ b/account/templates/account/facilitator_list.html
@@ -11,7 +11,7 @@
                         <table class="table table-striped table-hover ">
                               <thead>
                                <tr>
-                                 <th>id</th>
+                                 <th>SN</th>
                                  <th>First Name</th>
                                  <th>Last Name</th>
                                  <th>Gender</th>
@@ -25,7 +25,7 @@
                              <tbody>
                              {% for fac in facs %}
                                <tr>
-                                 <td>{{fac.tutor_id}}</td>
+                                 <td>{{fac.id}}</td>
                                  <td>{{fac.first_name}}</td>
                                  <td>{{fac.last_name}}</td>
                                  <td>{{fac.gender}}</td>
