added more functionality to front-view

--- a/account/templates/account/enumerator_list.html
+++ b/account/templates/account/enumerator_list.html
@@ -37,7 +37,15 @@
                             {% endfor %}
                            </tbody>
                          </table>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a><br/><br/>
+                        <div class="jumbotron">
+                             <h3>Enumerators Summary</h3>
+                             <ul style="list-style: none">
+                                 <li>Number of Enumerators: {{number_of_enumerators }}</li>
+                                 <li>Females: {{females}}</li>
+                                 <li>Males: {{males}}</li>
+                             </ul>
+                         </div>>
                     </div>
                 </div>
             </div>
