--- a/account/templates/account/lga_list.html
+++ b/account/templates/account/lga_list.html
@@ -23,7 +23,13 @@
                             {% endfor %}
                            </tbody>
                          </table>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a><br/><br/>
+                        <div class="jumbotron">
+                             <h3>Lga Summary</h3>
+                             <ul style="list-style: none">
+                                 <li>Local Government Areas: {{lga_number}}</li>
+                             </ul>
+                         </div>
                     </div>
                 </div>
             </div>
