--- a/account/templates/account/tutType_list.html
+++ b/account/templates/account/tutType_list.html
@@ -23,7 +23,15 @@
                             {% endfor %}
                            </tbody>
                          </table>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a><br/><br/>
+                        <div class="jumbotron">
+                             <h3>Neighborhoods Summary</h3>
+                             <ul style="list-style: none">
+                                 <li>Tutorial Types: {{tuturial_types_number}}</li>
+                                 <li>Most Used: {{most_used}}</li>
+                                 <li>Least Used: {{least_used}}</li>
+                             </ul>
+                         </div>
                     </div>
                 </div>
             </div>
