--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -29,7 +29,7 @@
       <ul class="nav navbar-nav navbar-right">
        {% if request.user.is_authenticated %}
           <li class="user">Hello {{ request.user }}</li>
-        <li><a href="{% url 'account:logout' %}">Logout </a></li>
+        <li><a href="{% url 'account:index' %}">Logout </a></li>
        {% else %}
         <li><a href="{% url 'account:login' %}">Login</a></li>
        {% endif %}
