--- a/account/templates/account/facilitator_list.html
+++ b/account/templates/account/facilitator_list.html
@@ -37,15 +37,7 @@
                             {% endfor %}
                            </tbody>
                          </table>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a><br/><br/>
-                        <div class="jumbotron">
-                             <h3>Facilitators Summary</h3>
-                             <ul style="list-style: none">
-                                 <li>Number of Facilitators: {{number_of_facilitators }}</li>
-                                 <li>Females: {{females}}</li>
-                                 <li>Males: {{males}}</li>
-                             </ul>
-                         </div>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
                     </div>
                 </div>
             </div>
