--- a/transactions/templates/transactions/checkout/create.html
+++ b/transactions/templates/transactions/checkout/create.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>Checkout</h1>
     <div class="order-info">
-        <h3>Your order</h3>
+        <h3>Your Checkout List</h3>
         <ul>
             {% for item in cart %}
                 <li>
